# energy-bidding-competition-template

./: README.md  pyproject.toml
hackathon_template/: template.py
