[tool.poetry]
name = "hackathon-template"
version = "0.1.0"
description = ""
authors = ["Paul Hendrik Tiemann <paul.hendrik.tiemann@uni-oldenburg.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.2"
httpx = "^0.27.0"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
